@@ -69,7 +69,7 @@ static char THIS_FILE[] = __FILE__;
 #endif
 
 #define VERSION_STRING  "SerialEM Version 3.8.0 beta"
-#define TAG_STRING      "(Tagged SEM_3-7-0, 1/30/19)"
+#define TAG_STRING      "(Tagged SEM_3-7-1, 2/4/19)"
 
 // Offsets for static window inside main frame
 #define STATIC_BORDER_TOP      0
